--- a/db.props
+++ b/db.props
@@ -1,4 +1,4 @@
-jdbc.url=jdbc:mariadb://localhost:3308
-jdbc.schema=cab302
-jdbc.username=root
-jdbc.password=root
+jdbc.url=jdbc:sqlite:MazeDB.db
+jdbc.schema=
+jdbc.username=
+jdbc.password=
