:bug: CI Yaml Scripts Fix.

--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -24,4 +24,4 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
     - name: Build with Ant
-      run: ant -noinput -buildfile build.xml
+      run: ant -noinput -lib lib -lib libCI -buildfile build.xml
