:green_heart: Added Deploy and Docs to CI.

--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -23,5 +23,5 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-    - name: Test
+    - name: Build, Test, Docs and Deploy
       run: ant -noinput -lib lib -lib libCI -buildfile build.xml
